fixed layout issues

--- a/Final/style.css
+++ b/Final/style.css
@@ -3,6 +3,8 @@ body {
     font-family: Manrope;
     padding: 0%;
     background-color: #141414;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 header {
@@ -264,11 +266,12 @@ h2 {
 }
 
 article img {
-    padding: 10px;
+    max-width: 100%;
 }
 
 article a {
     color: white;
+    padding-left: 10px;
 }
 
 .article-des {
@@ -293,7 +296,7 @@ article h3 a {
 }
 
 .article-subtext {
-    padding: 0px;
+    padding-left: 10px;
     font-size: .75em;
     font-weight: 400;
 }
@@ -719,6 +722,14 @@ footer p {
         width: 100%;
     }
 
+    .article-subtext {
+        padding: 0%;
+    }
+
+    article a {
+        padding: 0%;
+    }
+
     section h2 {
         font-size: 2.2em;
     }
@@ -783,9 +794,9 @@ footer p {
 
 }
 
-@media (min-width: 340px) {
+/* @media (min-width: 340px) {
     body {
         margin: 0% auto;
     }
 
-}
+} */
